# pdfmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  debug_watermark.py  extract_pdf.py  index.html  main.py  preview.py  pyproject.toml  sample.py  watermark.py  watermark_preview.html
